# Scraped_Nigeria_Presidential_election_results

./: .gitignore  .~lock.2023_presidential_data_points.csv#  2019_presidential_data_point.csv  2023_presidential_data_points.csv  README.md  pyproject.toml
nigeria_elections_2023_data/: data.py  scraper.py
nigeria_elections_data/: 2019_presidential_election_data.py  2023_presidential_election_data.py  main.py
