[tool.poetry]
name = "nigeria-elections-data"
version = "0.1.0"
description = "A project repo on all Nigeria's elections data"
license = "MIT"
authors = ["OLuwatobiTobias <giwaoluwatobi@gmail.com>"]
readme = "README.md"
repository = "https://github.com/OluwatobiTobias/Scraped_Nigeria_Presidential_election_results.git"
packages = [{include = "nigeria_elections_data"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.2"
webdriver-manager = "^3.8.5"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
